--- a/GestionPeliculas/GestionPeliculas.csproj
+++ b/GestionPeliculas/GestionPeliculas.csproj
@@ -79,6 +79,9 @@
 	  <MauiXaml Update="Pages\ListPeliculasPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Pages\LoginPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Pages\MainMenuPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
